--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-share": "^5.2.2",
     "tailwind-merge": "^3.4.0",
     "uploadthing": "^7.7.4"
   },
